Improve button contrast for seafoam. (Fix #18)

--- a/scss/seafoam.scss
+++ b/scss/seafoam.scss
@@ -12,12 +12,14 @@ $thumbnail-border: 4px solid $secondary-color;
 $thumbnail-shadow: none;
 $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 
-$button-background: $secondary-color;
-$button-color: $primary-color;
-
 @import 'foundation-core';
 @import 'omeka';
 
 header a {
   color: $white;
+}
+
+.tags.label {
+  background-color: $secondary-color;
+  color: #000;
 }
